--- a/.github/workflows/clock in.yml
+++ b/.github/workflows/clock in.yml
@@ -1,30 +1,11 @@
-
-name: ClockIn
-
-on:
-  push:
-    branches: 
-      - master
-  watch:
-    types: started
-  schedule:
-    - cron: 0 */8 * * *
-
-jobs:
-  ClockIn:
-    runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Install python3
-        uses: actions/setup-python@master
-      - name: Install packages
-        run: |
-          pip3 install requests
-      - name: Clock In
-        env:
-          ACCOUNT: ${{ secrets.ACCOUNT }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-        run: |
-          python3 clock-in.py ${ACCOUNT} ${PASSWORD}
+- name: Working
+   uses: qzppeng/zju-ncov-hitcarder@0.0.x
+      with:
+         # zju account username(student  id).
+         username: ${{ secrets.ZJU_USERNAME }}
+         # zju account password.
+         password: ${{ secrets.ZJU_PASSWORD }}
+         # (optional) dingtalk_token.
+         dingtalk_token: ${{ secrets.DINGTALK_TOKEN }}
+         # (optional) serverchan_key.
+         serverchan_key: ${{ secrets.SERVERCHAN_KEY }}
